--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <script src="js/01_sum_of_numbers.js"></script>
+  <!-- <script src="js/01_sum_of_numbers.js"></script> -->
   <!-- <script src="js/02_gcd.js"></script> -->
   <!-- <script src="js/03_divisors.js"></script> -->
   <!-- <script src="js/04_quantity.js"></script> -->
@@ -21,7 +21,7 @@
   <!-- <script src="js/07_move_numbers.js"></script> -->
   <!-- <script src="js/08_days.js"></script> -->
   <!-- <script src="js/09_multiplication.js"></script> -->
-  <!-- <script src="js/10_game.js"></script> -->
+  <script src="js/10_game.js"></script>
 
 </body>
 
